--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 luxis ascend roguelike/Library/*
+luxis ascend roguelike/Temp/*
 luxis ascend roguelike/Logs/*
 luxis ascend roguelike/UserSettings/*
 luxis ascend roguelike/Library/PackageCache/com.unity.burst@1.7.4/.Runtime/207A89C76C3730EA
